<resources>
    <string name="app_name">Instagram</string>
    <string name="_100">100</string>
    <string name="postingan">Postingan</string>
    <string name="_902">902</string>
    <string name="mengikuti">Mengikuti</string>
    <string name="_734">734</string>
    <string name="pengikut">Pengikut</string>
    <string name="erpi_resty_utari">Erpi Resty Utari</string>
    <string name="teknik_informatika_3a">Teknik Informatika 3A</string>
    <string name="politeknik_negeri_ketapang">Politeknik Negeri Ketapang</string>
    <string name="ketapang_kalbar">Ketapang,Kalbar</string>
    <string name="diikuti">DIIKUTI</string>
    <string name="pesan">PESAN</string>
    <string name="pesan">PESAN</string>
</resources>